# someCandCppExamples

./: README.md
ArraySpecificOperations/Core/: CMakeLists.txt
ArraySpecificOperations/Core/src/: main.cpp  thread.cpp
ArraySpecificOperations/Framework/: CMakeLists.txt
ArraySpecificOperations/Framework/src/: main.cpp
ArraySpecificOperations/LoopIntensiveOperationsInC/: .cproject  CMakeLists.txt  LoopIntensiveOperationsInC.c  computationKernels.h  populateArrays.h
ArraySpecificOperations/LoopIntensiveOperationsInC/buildCustom/: LoopIntensiveOperationsInC_map.out  Makefile  cmake_install.cmake  executionTrace.txt  runFull.sh
ArraySpecificOperations/ParallelizationApproaches/: CMakeLists.txt  README.md  matrix_multiplication_results.txt
ArraySpecificOperations/ParallelizationApproaches/src/: Adjoint.cpp  Filtering.cpp  GrayscaleParallel.cpp  ImageGrayscaling.cpp  MatrixMultiplication.cpp  priority.cpp
ArraySpecificOperations/StaticAndDynamic2DArrays/: .project  CMakeLists.txt
Framework/: .gitignore  adjoint_parallel.json  complex_parallel.json  determinant_parallel.json  grayscale_parallel.json  inverse_parallel.json  multiply_parallel.json  sum_parallel.json
Framework/install/: local_setup.sh  setup.ps1  setup.sh
Framework/log/: latest_build
Framework/src/framework/: CMakeLists.txt
LoopIntensiveOperationsInC/: .project  CMakeLists.txt  LoopIntensiveOperationsInC.c  computationKernels.c  computationKernels.h  populateArrays.h
LoopIntensiveOperationsInC/buildCustom/: CMakeCache.txt  LoopIntensiveOperationsInC  LoopIntensiveOperationsInC.jrs  LoopIntensiveOperationsInC.lcov  LoopIntensiveOperationsInC.loop.select  LoopIntensiveOperationsInC.plan  LoopIntensiveOperationsInC_map.out  Makefile  cmake_install.cmake  executionTrace.txt
LoopIntensiveOperationsInC/kernels/: kernelConfiguration.h
LoopIntensiveOperationsInC/tests/: testAllKernels.c
OpenCV/DisplayImage/: CMakeLists.txt  README.md
OpenCV/Mandelbrot/: CMakeLists.txt  README.md
ROS2/: README.md
ROS2/dev_ws/: perf.data
StaticAndDynamic2DArrays/: .cproject
StaticAndDynamic2DArrays/src/: TestArraysEclipse.cpp
(+113 files in other folders)
